--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
     "chart.js": "^4.5.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.23.12",
     "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "react": "^19.1.0",
@@ -30,7 +33,9 @@
     "react-router-dom": "^7.7.1",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
-    "socket.io-client": "^4.8.1"
+    "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.8.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
